src/wrf/slurm_outputs/norainnovent_heatmap_ss_qss_vs_ss_wrf_v1.txt
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/norainnovent_heatmap_ss_qss_vs_ss_wrf_figsrc.py", line 13, in <module>
    from revmywrf.ss_functions import get_lwc, get_nconc, get_ss_qss, linregress
ModuleNotFoundError: No module named 'revmywrf.ss_functions'
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
Polluted
0.7010683970246476 0.08771059306395967 0.9004720291170121
# pts total: 6741582
max: 31.045792000687467
# pts ss > 2%: 780972
Number of points in Q1: 6715796
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 23628

Domain: 0.10324288954267741 31.045792000687467
Range: -5.277823 20.070312
Unpolluted
0.7021700863814551 0.06493053485083855 0.8762410025922781
# pts total: 5235331
max: 10.326852481144993
# pts ss > 2%: 317544
Number of points in Q1: 5213353
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 19902

Domain: 0.11286629217844707 10.326852481144993
Range: -5.184498 12.127304
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
Polluted
0.7010683970246476 0.08771059306395967 0.9004720291170121
# pts total: 6741582
max: 31.045792000687467
# pts ss > 2%: 780972
Number of points in Q1: 6715796
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 23628

Domain: 0.10324288954267741 31.045792000687467
Range: -5.277823 20.070312
Unpolluted
0.7021700863814551 0.06493053485083855 0.8762410025922781
# pts total: 5235331
max: 10.326852481144993
# pts ss > 2%: 317544
Number of points in Q1: 5213353
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 19902

Domain: 0.11286629217844707 10.326852481144993
Range: -5.184498 12.127304
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
Polluted
0.5943859987037914 0.19858626892735765 0.8743285250618855
# pts total: 7411325
max: 54.54756836999827
# pts ss > 2%: 1315321
Number of points in Q1: 7372257
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 36906

Domain: 0.10324288954267741 54.54756836999827
Range: -12.413106 20.070312
Unpolluted
0.5035432137894105 0.35889857799058866 0.8967501851508916
# pts total: 6728704
max: 119.50635786858604
# pts ss > 2%: 1711843
Number of points in Q1: 6696444
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 30172

Domain: 0.11286629217844707 119.50635786858604
Range: -10.896954 45.24754
/var/spool/slurmd/job31395776/slurm_script: line 2: 20833 Killed                  python $HOME/proj/20supersat/src/wrf/norainnovent_heatmap_ss_qss_vs_ss_wrf_figsrc.py
slurmstepd: error: Detected 1 oom-kill event(s) in step 31395776.batch cgroup. Some of your processes may have been killed by the cgroup out-of-memory handler.
  File "/global/home/users/kalatimer/proj/20supersat/src/wrf/norainnovent_heatmap_ss_qss_vs_ss_wrf_figsrc.py", line 35
    for case_label in ['Unpolluted']#case_label_dict.keys():
                                                           ^
SyntaxError: invalid syntax
/global/home/users/kalatimer/proj/20supersat/src/wrf/ss_functions.py:82: RuntimeWarning: invalid value encountered in true_divide
  return meanr/nconc
/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal
  mask |= resdat <= 0
Unpolluted
0.5035890243808976 0.3589899063148059 0.8968683713977544
# pts total: 6728704
max: 119.50636325491446
# pts ss > 2%: 1711654
Number of points in Q1: 6696444
Number of points in Q2: 0
Number of points in Q3: 0
Number of points in Q4: 30172

Domain: 0.11286609823678007 119.50636325491446
Range: -10.896954 45.24754
